--- a/components/css/demo.css
+++ b/components/css/demo.css
@@ -31,7 +31,7 @@ body {
   font-family: 'Avenir Next', Avenir, 'Helvetica Neue', 'Lato', 'Segoe UI', Helvetica, Arial, sans-serif;
   margin: 0;
   color: #cecece;
-  background: #1d1e21;
+  background: #b4b472;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
